feat(backend + web): change type of ton amount to nano
